# cmake-modules-collection

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  clean-cmake.bat  clean-cmake.sh  genindex.html  index.html  objects.inv  run-cmake.bat  run-cmake.sh  search.html  searchindex.js
.doctrees/: index.doctree
.doctrees/module/: BundleBinTarget.doctree  FuncPrint.doctree
.github/workflows/: build-doc-with-sphinx.yml  generate-doc-with-sphinx.yml
_downloads/38da7b0d3f34bf749fce35ff4ce6feb4/: CMakeTargets_sample.json
_downloads/5b942f77e2979479a8ab4c64608b796a/: schema.json
_sources/: index.rst.txt
_sources/module/: BuildBinTarget.rst.txt  CMakeTargetsFile.rst.txt  FuncDependency.rst.txt  FuncFileManip.rst.txt  FuncPrint.rst.txt  Map.rst.txt
_static/: documentation_options.js
cmake/modules/: BinaryTarget.cmake  BuildBinTarget.cmake  BundleBinTarget.cmake  (+21 more)
doc/: CMakeLists.txt  requirements.txt
doc/source/: conf.py  index.rst
doc/source/extensions/: show_cmake_objects.py
doc/source/module/: BinTarget.rst  FuncDebug.rst  FuncStringManip.rst
docs/: CMakeLists.txt
module/: BinTarget.html  BinaryTarget.html  BuildBinTarget.html  BundleBinTarget.html  CMakeTargetsFile.html  Debug.html  Dependency.html  Directory.html  FileManip.html  FuncDebug.html  FuncDependency.html  FuncDirectory.html  FuncFileManip.html  FuncPrint.html  FuncStringManip.html  Map.html  PathManip.html  Print.html  StringManip.html
tests/: CMakeLists.txt  Directory.cmake  DirectoryFindLib.cmake  DirectoryScan.cmake  DirectoryScanDirs.cmake  FileManip.cmake  FileManipAbsolutePath.cmake  FileManipGetComponent.cmake  FileManipRelativePath.cmake  FileManipStripPath.cmake  PrintFormatedMessage.cmake  PrintPaths.cmake  PrintStrings.cmake  StringManip.cmake  StringManipExtractInterface.cmake  StringManipSplit.cmake  StringManipSplitTransform.cmake  StringManipStripInterfaces.cmake
tests/binary_target/: binary_target.cmake  binary_target_ADD_DEPENDENCIES.cmake  binary_target_ADD_INCLUDE_DIRECTORIES.cmake  binary_target_ADD_LINK_LIBRARIES.cmake  binary_target_ADD_PRECOMPILED_HEADER.cmake  binary_target_ADD_SOURCES.cmake  binary_target_CONFIGURE_SETTINGS.cmake  binary_target_CREATE.cmake  binary_target_CREATE_FULLY.cmake
tests/build_bin_target/: build_bin_target.cmake  build_bin_target_ADD_INCLUDE_DIRECTORIES.cmake  build_bin_target_ADD_PRECOMPILED_HEADER.cmake  build_bin_target_ADD_SOURCES.cmake  build_bin_target_CONFIGURE_SETTINGS.cmake  build_bin_target_CREATE.cmake
tests/cmake_targets_file/: cmake_targets_file.cmake  cmake_targets_file_GET_CONFIG_LIST.cmake  cmake_targets_file_GET_KEYS.cmake  cmake_targets_file_GET_LOADED_FILE.cmake  cmake_targets_file_GET_SETTINGS.cmake  cmake_targets_file_GET_SETTINGS_KEYS.cmake  cmake_targets_file_GET_SETTING_VALUE.cmake  cmake_targets_file_GET_VALUE.cmake  cmake_targets_file_HAS_CONFIG.cmake  cmake_targets_file_HAS_SETTING.cmake  cmake_targets_file_IS_LOADED.cmake  cmake_targets_file_LOAD.cmake  cmake_targets_file_PRINT_CONFIGS.cmake  cmake_targets_file_PRINT_DEP_CONFIG.cmake  cmake_targets_file_PRINT_TARGET_CONFIG.cmake  cmake_targets_file_TRY_GET_VALUE.cmake  cmake_targets_file_assert_config_file_loaded.cmake  cmake_targets_file_assert_dependency_config_exists.cmake  cmake_targets_file_assert_target_config_exists.cmake  cmake_targets_file_deserialize_list.cmake  cmake_targets_file_extract_json_primitive_property.cmake  cmake_targets_file_extract_remote_dep_props.cmake  cmake_targets_file_extract_target_props.cmake  cmake_targets_file_get_json_array.cmake  cmake_targets_file_get_json_object.cmake  cmake_targets_file_get_json_value.cmake  cmake_targets_file_has_json_property.cmake  cmake_targets_file_is_serialized_list.cmake  cmake_targets_file_json_array_to_list.cmake  cmake_targets_file_json_object_to_map.cmake  cmake_targets_file_serialize_list.cmake  cmake_targets_file_validate_json_boolean.cmake  cmake_targets_file_validate_json_number.cmake  cmake_targets_file_validate_json_string.cmake
tests/data/: CMakeLists.txt  main.cpp  source_1.cpp  source_2.cpp  source_3.cpp  source_4.cpp  source_5.cpp
tests/data/cmake/: Common.cmake
tests/data/config/: CMakeTargets.json  CMakeTargets_extra.json  CMakeTargets_minimal.json  CMakeTargets_regular.json
tests/data/src/: main.cpp  source_1.cpp  source_2.cpp  source_3.cpp  source_4.cpp  source_5.cpp
tests/data/src/sub_1/: source_sub_1.cpp
tests/data/src/sub_2/: source_sub_2.cpp
tests/data/sub_1/: source_sub_1.cpp
tests/data/sub_2/: source_sub_2.cpp
tests/dependency/: dependency.cmake  dependency_ADD_INCLUDE_DIRECTORIES.cmake  dependency_EXPORT-build-append-01-expected.txt  dependency_EXPORT-build-append-02-expected.txt  dependency_EXPORT-build-append-03-expected.txt  dependency_EXPORT-build-overwrite-01-expected.txt  dependency_EXPORT-install-append-01-expected.txt  dependency_EXPORT-install-append-02-expected.txt  dependency_EXPORT-install-append-04-expected.txt  dependency_EXPORT.cmake  dependency_IMPORT.cmake  dependency_INCLUDE_DIRECTORIES.cmake  dependency_SET_IMPORTED_LOCATION.cmake
tests/directory/: directory.cmake  directory_COLLECT_SOURCES_BY_LOCATION.cmake  directory_COLLECT_SOURCES_BY_POLICY.cmake  directory_FIND_LIB.cmake  directory_SCAN.cmake  directory_SCAN_DIRS.cmake
tests/file_manip/: file_manip.cmake  file_manip_ABSOLUTE_PATH.cmake  file_manip_GET_COMPONENT.cmake  file_manip_RELATIVE_PATH.cmake  file_manip_STRIP_PATH.cmake
tests/map/: map.cmake  map_ADD.cmake  map_FIND.cmake  map_GET.cmake  map_HAS_KEY.cmake  map_HAS_VALUE.cmake  map_KEYS.cmake  map_REMOVE.cmake  map_SEARCH.cmake  map_SET.cmake  map_SIZE.cmake  map_VALUES.cmake  map_validate_map_key.cmake
tests/path_manip/: path_manip.cmake  path_manip_GET_COMPONENT.cmake  path_manip_STRIP_PATH.cmake
tests/print/: print.cmake  print_FormatedMessage.cmake  print_Paths.cmake  print_REL_PATHS.cmake  print_Strings.cmake
tests/string_manip/: string_manip.cmake  string_manip_EXTRACT_INTERFACE.cmake  string_manip_SPLIT.cmake  string_manip_SPLIT_TRANSFORM.cmake  string_manip_STRIP_INTERFACES.cmake
(+5 files in other folders)
