# Copyright 2025-present, Joseph Garnier
# All rights reserved.
#
# This source code is licensed under the license found in the
# LICENSE file in the root directory of this source tree.
# =============================================================================
# What Is This?
# -------------
# See README file in the root directory of this source tree.

cmake_minimum_required(VERSION 4.0.1 FATAL_ERROR)

####################### Init level variables ##################################
set(TESTS_DATA_DIR "${CMAKE_CURRENT_SOURCE_DIR}/data")

####################### Prepare data for tests ################################
add_subdirectory(data)

####################### Call tests ############################################
message(CHECK_START "Building tests")
list(APPEND CMAKE_MESSAGE_INDENT "  ")

ct_set_print_length("${CT_DEFAULT_PRINT_LENGTH}")
cpp_set_global("CT_DEBUG_MODE" "FALSE")
ct_add_dir("./binary_target" USE_REL_PATH_NAMES LANGUAGES FORWARD_LANGUAGES CMAKE_OPTIONS
  "-DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}"
  "-DCMAKE_GENERATOR=${CMAKE_GENERATOR}"
  "-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}"
  "-DTESTS_DATA_DIR=${TESTS_DATA_DIR}"
  "-DCMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD}"
)
ct_add_dir("./cmake_targets_file" USE_REL_PATH_NAMES LANGUAGES FORWARD_LANGUAGES CMAKE_OPTIONS
  "-DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}"
  "-DCMAKE_GENERATOR=${CMAKE_GENERATOR}"
  "-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}"
  "-DTESTS_DATA_DIR=${TESTS_DATA_DIR}"
)
ct_add_dir("./dependency" USE_REL_PATH_NAMES LANGUAGES FORWARD_LANGUAGES CMAKE_OPTIONS
  "-DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}"
  "-DCMAKE_GENERATOR=${CMAKE_GENERATOR}"
  "-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}"
  "-DTESTS_DATA_DIR=${TESTS_DATA_DIR}"
)
ct_add_dir("./directory" USE_REL_PATH_NAMES LANGUAGES FORWARD_LANGUAGES CMAKE_OPTIONS
  "-DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}"
  "-DCMAKE_GENERATOR=${CMAKE_GENERATOR}"
  "-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}"
  "-DTESTS_DATA_DIR=${TESTS_DATA_DIR}"
)
ct_add_dir("./file_manip" USE_REL_PATH_NAMES LANGUAGES FORWARD_LANGUAGES CMAKE_OPTIONS
  "-DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}"
  "-DCMAKE_GENERATOR=${CMAKE_GENERATOR}"
  "-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}"
  "-DTESTS_DATA_DIR=${TESTS_DATA_DIR}"
)
ct_add_dir("./map" USE_REL_PATH_NAMES LANGUAGES FORWARD_LANGUAGES CMAKE_OPTIONS
  "-DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}"
  "-DCMAKE_GENERATOR=${CMAKE_GENERATOR}"
  "-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}"
  "-DTESTS_DATA_DIR=${TESTS_DATA_DIR}"
)
ct_add_dir("./path_manip" USE_REL_PATH_NAMES LANGUAGES FORWARD_LANGUAGES CMAKE_OPTIONS
  "-DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}"
  "-DCMAKE_GENERATOR=${CMAKE_GENERATOR}"
  "-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}"
  "-DTESTS_DATA_DIR=${TESTS_DATA_DIR}"
)
ct_add_dir("./print" USE_REL_PATH_NAMES LANGUAGES FORWARD_LANGUAGES CMAKE_OPTIONS
  "-DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}"
  "-DCMAKE_GENERATOR=${CMAKE_GENERATOR}"
  "-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}"
  "-DTESTS_DATA_DIR=${TESTS_DATA_DIR}"
)
ct_add_dir("./string_manip" USE_REL_PATH_NAMES LANGUAGES FORWARD_LANGUAGES CMAKE_OPTIONS
  "-DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}"
  "-DCMAKE_GENERATOR=${CMAKE_GENERATOR}"
  "-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}"
  "-DTESTS_DATA_DIR=${TESTS_DATA_DIR}"
)

list(POP_BACK CMAKE_MESSAGE_INDENT)
message(CHECK_PASS "done")